src/golden/cards/templates/nested/errors/test.golden/definedBeforeReferenced.fl
	card DefinedBeforeReferenced
		state 
			MyX x
			MyX y
		
		template top
			hold <- x => referer
		
		template inner
		
		template referer
			other <- y => inner
